apps/the-project/base/broadcaster-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broadcaster-dep
spec:
  replicas: 6
  selector:
    matchLabels:
      app: broadcaster
  template:
    metadata:
      labels:
        app: broadcaster
    spec:
      containers:
      - name: broadcaster
        # image: arkb2023/broadcaster:4.6.1
        image: arkb2023/broadcaster:latest  # placeholder
        readinessProbe:
          exec:
            command: ["sh", "-c", "echo ok"]
          initialDelaySeconds: 2
          periodSeconds: 10
        
        # Resource requests and limits
        # -----------------------------------------------
        resources:
          requests:
            cpu: "250m"           # Minimum CPU needed
            memory: "256Mi"       # Minimum memory needed
          limits:
            cpu: "500m"           # Maximum CPU allowed
            memory: "512Mi"
