apps/the-project/base/todo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
spec:
  rules:
  - http:
      paths:
      - path: /staging
        pathType: Prefix
        backend:
          service:
            name: todo-app-svc
            port:
              number: 1234
      - path: /staging/todos
        pathType: Prefix
        backend:
          service:
            name: todo-backend-svc
            port: 
              number: 4567
